# paws

./: .gitignore  .gitmodules  README.md  keyboard_utils.py  main.py  pync  pyproject.toml  setup.py
images/: build_icns.sh  cat_scream_emoji.icns
rules/: events_eligibility_rule.py  rules.py
