[tool.poetry]
name = "Paws"
version = "0.1.0"
description = "Paws your laptop when your cat gets its paws on it!"
authors = ["Parth Doshi <doshi.parth9@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9"
rumps = "^0.3.0"
pyobjc = "^8.5.1"

[tool.poetry.group.dev.dependencies]
cx-Freeze = "^6.11.1"
tomli = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
